--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -172,36 +172,36 @@ jobs:
     displayName: 'Publish Artifact: drop'
     inputs:
       PathtoPublish: '$(build.artifactstagingdirectory)'
-    condition: succeededOrFailed()
+    #condition: succeededOrFailed()
 
 
   
    # Publish to master or develop MyGet feed based on the source branch 
-  - task: NuGetCommand@2
-    name: 'MyGetPublishing_Master'
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-    inputs:
-      command: push
-      nuGetFeedType: external
-      publishFeedCredentials: 'MyGetMaster'
-      versioningScheme: byEnvVar
-      versionEnvVar: packageversion
-  
-  - task: NuGetCommand@2
-    name: 'MyGetPublishing_Develop'
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
-    inputs:
-      command: push
-      nuGetFeedType: external
-      publishFeedCredentials: 'MyGetDev'
-      versioningScheme: byEnvVar
-      versionEnvVar: packageversion
-
-  - task: DotNetCoreCLI@2
-    name: 'Xbim_Publishing'
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/feature/netcore'))
-    inputs:
-      command: 'push'
-      packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-      nuGetFeedType: 'internal'
-      publishVstsFeed: '2591d379-784d-4b57-88f5-a932c93cbffd'
+#  - task: NuGetCommand@2
+#    name: 'MyGetPublishing_Master'
+#    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+#    inputs:
+#      command: push
+#      nuGetFeedType: external
+#      publishFeedCredentials: 'MyGetMaster'
+#      versioningScheme: byEnvVar
+#      versionEnvVar: packageversion
+#  
+#  - task: NuGetCommand@2
+#    name: 'MyGetPublishing_Develop'
+#    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
+#    inputs:
+#      command: push
+#      nuGetFeedType: external
+#      publishFeedCredentials: 'MyGetDev'
+#      versioningScheme: byEnvVar
+#      versionEnvVar: packageversion
+#
+#  - task: DotNetCoreCLI@2
+#    name: 'Xbim_Publishing'
+#    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/feature/netcore'))
+#    inputs:
+#      command: 'push'
+#      packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+#      nuGetFeedType: 'internal'
+#      publishVstsFeed: '2591d379-784d-4b57-88f5-a932c93cbffd'
